tests/snapshots/run_wpt_conformance__coreml_maxPool2d_float32_4D_tensor_options_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float32 4D tensor options.padding, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type max_pool: Required param 'strides' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[1, 0, 0, 1], strides=[], windowDimensions=null);
  }

  outputs { maxPool2dOutput; }
}
