tests/snapshots/run_wpt_conformance__coreml_maxValue_as_-Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js maxValue as -Infinity, coreml
 clamp :: maxValue as -Infinity: index 0: actual=NaN expected=-inf ulp=4294967295 tolerance=4
  inputs: clampInput: [String("-Infinity"), String("Infinity"), -300000000000000000000000000000000000, 2147483647, -2, 1, 0] (constant)
  expected clampOutput: [-inf, -inf, -inf, -inf, -inf, -inf, -inf]
  actual clampOutput: [NaN, NaN, -inf, -inf, -inf, -inf, -inf]
  expected clampOutput full nd:
(shape [7])
[-inf, -inf, -inf, -inf, -inf, -inf, -inf]
  actual clampOutput full nd:
(shape [7])
[NaN, NaN, -inf, -inf, -inf, -inf, -inf]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[7] @bytes([0, 0, 128, 255, 0, 0, 128, 127, 145, 28, 103, 250, 0, 0, 0, 79, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 0, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue="-Infinity", minValue=null);
  }

  outputs { clampOutput; }
}
